"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-12-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-21:
	  Moved much of CHPSIM state structures to more accessible
		files and namespaces -- they are now part of the context
		class used to resolve run-time values.
	  Obsolete: sim/chpsim/{Channel,Variable,InstancePools}.*
	  This snapshot has missing definitions for CHP::action::execute().
	  Next: CHP and nonmeta expression resolution (virtual) functions, 
		and then CHP execute, with lvalue/rvalue distinctions.


2006-12-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-20:
	  Privatized member implementations of entity::footprint, 
		namely PRS::footprint, chp_footprint, SPEC::footprint.
		This breaks an unnecessarily deep chain of header
		and definition dependencies, thereby speeding up recompiles.


2006-12-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-19:
	  Factored out sim/prsim/Event.h template classes into sim/event.h.
	  Added event-queue structure to CHPSIM::State.
	  TODO: main step-execution loop of CHPSIM::State, and general
		event execution and handling. 


2006-12-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-18:
	  Wrote 'dot' event graph dumper for chpsim events.  
		run: hackt chpsim -fdump-dot-struct <obj>
	  Test suite now supports testing chpsim dot graph generation.


2006-12-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-17:
	  Loop-back event slot recycled, no more null-waste.
		Defined operator = for Event and DependenceSet for 
		move semantics because std::valarray does not use
		container move semantics (only element copy, no-resize).  
	  Updated test-cases accordingly.  