@@ -1,6 +1,6 @@
 /**
 	\file "Object/nonmeta_context.cc"
-	$Id: nonmeta_context.cc,v 1.1.2.1 2006/12/19 23:43:59 fang Exp $
+	$Id: nonmeta_context.cc,v 1.1.2.2 2006/12/20 08:33:14 fang Exp $
  */
 
 #include "Object/nonmeta_context.h"
@@ -11,8 +11,9 @@ namespace entity {
 // class nonmeta_context method definitions
 
 nonmeta_context::nonmeta_context(const state_manager& s, 
-		nonmeta_state_manager& v, const size_t pid) :
-		sm(s), values(v), process_index(pid) { }
+		nonmeta_state_manager& v, event_type& e, 
+		enqueue_queue_type& q) :
+		sm(s), values(v), event(e), queue(q) { }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 nonmeta_context::~nonmeta_context() { }
