@@ -1,14 +1,20 @@
 /**
 	\file "Object/nonmeta_context.h"
 	This is used to lookup run-time values and references.  
-	$Id: nonmeta_context.h,v 1.1.2.1 2006/12/19 23:44:00 fang Exp $
+	$Id: nonmeta_context.h,v 1.1.2.2 2006/12/20 08:33:16 fang Exp $
  */
 #ifndef	__HAC_OBJECT_NONMETA_CONTEXT_H__
 #define	__HAC_OBJECT_NONMETA_CONTEXT_H__
 
 #include "util/size_t.h"
+#include "util/STL/vector_fwd.h"
 
 namespace HAC {
+namespace SIM {
+namespace CHPSIM {
+	class EventNode;
+}	// end namespace CHPSIM
+}	// end namespace SIM
 namespace entity {
 
 class state_manager;		// for structural information
@@ -19,6 +25,8 @@ class nonmeta_state_manager;	// for run-time value information
 	Context information for lookup up run-time values from state.  
  */
 class nonmeta_context {
+	typedef	SIM::CHPSIM::EventNode		event_type;
+	typedef	std::default_vector<size_t>::type	enqueue_queue_type;
 	/**
 		Read-only structural information including
 		footprint frames.  
@@ -32,10 +40,14 @@ class nonmeta_context {
 		Global process index, for looking up footprint frames.  
 		Zero-value means top-level.
 	 */
-	const size_t				process_index;
+	event_type&				event;
+	/**
+		This is where to enqueue successors to evaluate.  
+	 */
+	enqueue_queue_type&			queue;
 public:
 	nonmeta_context(const state_manager&, nonmeta_state_manager&, 
-		const size_t);
+		event_type&, enqueue_queue_type&);
 
 	~nonmeta_context();
 
