@@ -1,7 +1,7 @@
 /**
 	\file "sim/chpsim/Event.h"
 	Various classes of chpsim events.  
-	$Id: Event.h,v 1.1.2.10 2006/12/19 23:44:11 fang Exp $
+	$Id: Event.h,v 1.1.2.11 2006/12/20 08:33:25 fang Exp $
  */
 
 #ifndef	__HAC_SIM_CHPSIM_EVENT_H__
@@ -160,7 +160,8 @@ public:
 	// return: references to changed state?
 	void
 	execute(const state_manager&, InstancePools&, 
-		vector<instance_reference>&);
+		vector<instance_reference>&, 
+		vector<event_index_type>&);
 
 	ostream&
 	dump_struct(ostream&) const;
