@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2006-12-20	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-80-63-chpsim-01-22:
+	  Worked out more top-down flow code for CHP event execution.
+		Missing implementation details, still undefined references.  
+	  nonmeta_context is (unfortunately) now tied to CHPSIM's 
+		implementation, with reference to CHPSIM::EventNode.
+
+
 2006-12-19	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-80-63-chpsim-01-21:
